# monorepo

./: .envrc  .gitignore  README.md  docker-compose.dev.yml  main.py  package-lock.json  package.json  pyproject.toml
apps/backend/: Dockerfile  Dockerfile.dev  audio_bridge.py  inference.py  main.py  pyproject.toml  video.py  webrtc_video.py
apps/frontend/: Dockerfile.dev  index.html  package.json  vite.config.server.ts  vite.config.ts
apps/frontend/public/: manifest.webmanifest
apps/frontend/src/: App.tsx  index.css  types.ts
apps/frontend/src/components/: Comms.tsx  DistanceStatusPill.tsx  Log.tsx  NextButton.tsx  OpsBar.tsx  Panel.tsx  SoundBank.tsx  Thermometer.tsx  VitalSigns.tsx  Webcam.tsx
apps/frontend/src/hooks/: useRobotWS.ts  useWebRTC.ts
apps/frontend/src/pages/: CreateProfilePage.tsx  EvaluationPage.tsx  MedicalFeedbackPage.tsx  OnboardingPage.tsx  RecommendedActionsPage.tsx  StepExecutionPage.tsx  TutorialPage.tsx  UserManual.tsx  WaitingPage.tsx
multi-label_classifier/: cvmodel.py  live_label.py
ros2_publisher_node/: Dockerfile  README.md  justfile
ros2_publisher_node/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_publisher_node/src/robot_interfaces/msg/: RadarVitals.msg  Temperature.msg
ros2_publisher_node/src/sentry_sensors/: setup.cfg
ros2_publisher_node/src/sentry_sensors/sentry_sensors/: sensor_publisher_node.py
ros2_ws/: .gitignore
ros2_ws/src/robot_interfaces/: CMakeLists.txt
ros2_ws/src/robot_interfaces/msg/: AudioCommand.msg  RadarVitals.msg  Telemetry.msg
ros2_ws/src/sentry_sensors/: package.xml  setup.py
(+1 files in other folders)
