[project]
name = "robot-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "apps/backend",
]
