[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.9.0",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=11.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.46",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]
